# MuJoCo_mini_project

./: README.md  main.ipynb  pyproject.toml
robot/robot_arms/franka_emika_panda/: panda_nohand.xml  scene.xml
